@@ -1,5 +1,11 @@
 2009-02-22  Stefan Kost  <ensonic@users.sf.net>
 
+	* TODO:
+	* gtkdoc-mkdb.in:
+	  Prototype an idea.
+
+2009-02-22  Stefan Kost  <ensonic@users.sf.net>
+
 	* Makefile.am:
 	  Dist more files.
 
